Fills in several cms headbar methods. Adds bootstrap. Fixes fixed top navbars covering over cms headbar.

--- a/public/app/app.styl
+++ b/public/app/app.styl
@@ -50,3 +50,10 @@ ASBESTOS = #7F8C8D
 @import "./cms-headbar/cms-headbar.styl";
 @import "./components/mb-text/mb-text.styl";
 // end inject stylus
+
+.loggedIn
+  margin-top 50px
+
+.fixed-header-stopper
+  -webkit-transform translateZ(0)
+  transform translateZ(0)
